Resolves: tdf#113356 Missing numbering formats in writer field ui list

Change-Id: If1ba30783473b82f08fef3754fcdcf3b4e2951b4